--- a/ReactParkDemo/tsconfig.json
+++ b/ReactParkDemo/tsconfig.json
@@ -16,7 +16,6 @@
     "types": [
         "react",
         "react-dom",
-        "react-redux",
-        "hammerjs"
+        "react-redux"
    ]
 }
